# debtmap

./: .coverage  .debtmap.example.toml  .debtmap.toml  .debtmap.toml.example  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  404.html  ACTIONABLE_GUIDANCE_IMPROVEMENTS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLUSTERING_INTEGRATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEBTMAP_BUG_REPORT.md  DEBTMAP_EVALUATION.md  DEBT_ANALYSIS.md  DEBT_PATTERN_INTEGRATION.md  DEBT_RESOLUTION.md  DEBT_REVIEW.md  DESIGN.md  EVALUATION.md  FALSE_POSITIVE_ANALYSIS.md  FALSE_POSITIVE_ANALYSIS_REPORT.md  FALSE_POSITIVE_IMPROVEMENTS.md  FIXES_IMPLEMENTED.md  GOD_OBJECT_AGGREGATION_STRATEGY.md  IDEAL_FUNCTIONALITY.md  IMPLEMENTATION_PLAN.md  Justfile  OBSERVER_PATTERN_EVALUATION.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCT_ANALYSIS.md  README.md  REFACTORING_PLAN.md  REFACTORING_VERIFICATION.md  SCORE_DOUBLE_COUNTING_ANALYSIS.md  (+127 more)
.claude/: coverage.md
.github/: SECURITY.md
.mmm/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  PROJECT.md  ROADMAP.md  UPDATES.md
.prodigy/: VALIDATION_COMMAND_SUMMARY.md  analyze-chapters.sh  book-config.json  commit-message.txt  compare_debt.py  completion-result.json  completion-status.json  debt-comparison-summary.txt  debtmap-validation-test.json  debtmap-validation.json  env-test-validation.json  env-test.json  error-test.json  map-results.json  plan-item_0.md  plan-item_1.md  plan-item_2.md  plan-item_3.md  plan-item_4.md  plan-item_5.md  plan-item_6.md  plan-item_7.md  plan-item_8.md  plan-item_9.md  prodigy-validate-debtmap-improvement.py  test-after.json  test-automation.json  test-before.json  test-complete-after.json  test-complete-validation.json  test-debtmap-after.json  test-debtmap-before.json  test-success-validation.json  test-validation-automation.json  test-validation-output.json  test-validation.json  validation.json
analysis-guide/: advanced-features.html  analyzer-types.html  complexity-metrics.html  debt-patterns.html  example-outputs.html  index.html  interpreting-results.html  overview.html  risk-scoring.html
benches/: aggregation_benchmark.rs  ast_parsing_optimization_bench.rs  batch_analysis.rs  cache_pruning.rs  call_graph_bench.rs  clustering_performance.rs  concise_recommendation_bench.rs  constructor_detection_bench.rs  contextual_risk_bench.rs  coverage_performance.rs  coverage_scoring.rs  cross_file_resolution_bench.rs  evidence_formatter_bench.rs  framework_patterns.rs  god_object_bench.rs  god_object_struct_ownership_bench.rs  lcov_parallel_bench.rs  multi_debt_benchmark.rs  orchestration_adjustment_bench.rs  parallel_performance.rs  pattern_detection_bench.rs  progress_tracking_overhead.rs  python_callback_tracking_bench.rs  python_import_resolution_bench.rs  python_type_inference_bench.rs  rebalanced_scoring_bench.rs  score_based_sorting_bench.rs  semantic_naming_bench.rs  state_field_detection_bench.rs  tier_classification_bench.rs  unified_output_format_bench.rs  validate_parallel_bench.rs  varid_translation_memory.rs
book/: book.toml
configuration/: advanced.html  best-practices.html  display-output.html  index.html  languages.html  scoring.html  thresholds.html
dashboard/: index.html
docs/: AST_FUNCTIONAL_ANALYSIS.md  CONFIGURATION.md  EXTERNAL_API_DETECTION_TESTING.md  GOD_OBJECT_DETECTION.md  MACRO_EXPANSION_DESIGN.md  MARKET_ANALYSIS.md  MIGRATION_CONFIG.md  MIGRATION_PERFORMANCE_REMOVAL.md  MMM_WORKFLOW.md  PERFORMANCE_TUNING.md  PRODIGY_WORKFLOW.md  PROFILING_AUDIT.md  SOLIDITY_ROADMAP.md  TUI_ARCHITECTURE.md  call-graph-validation.md  entropy.md  html-template-customization.md  loc-counting.md  migration-dead-code-detection.md  migration-notes-spec-96.md  migration-spec-136.md  migration-spec-139.md  migration-unified-format.md  migration-weighted-complexity.md  output-format-guide.md  output-format.md  purity-analysis.md  python-analysis.md  python-dead-code-detection.md  recommendations.md  ripgrep-boilerplate-analysis.md  score-interpretation-guide.md  spec-132-benchmark-results.md  spec-195-testing-notes.md  test-quality-metrics.md  tiered-prioritization.md  validation-migration.md  workflow-compare-example.md
examples/: config-permissive.toml  config-strict.toml  effect_pipeline.rs  enhanced_complexity_demo.rs  extreme_debt_example.rs  false_positive_reduction_demo.rs  library_config.toml  orchestration-config.toml  pipeline_demo.rs  simple_calls.rs
examples/why-ai-fails-complex-tasks/: Cargo.toml  README.md  etl_bad.rs  etl_good.rs  events_bad.rs  events_good.rs
scoring-strategies/: data-flow.html  exponential-scaling.html  file-level.html  function-level.html  index.html  rebalanced.html  role-based.html
scripts/: check_documentation_coverage.sh
specs/: 001-ci-infrastructure-improvements.md  001-comprehensive-profiling-infrastructure.md  001-copy-all-item-as-llm-markdown.md  001-git2-migration.md  001-refined-types-domain-invariants.md  001-stillwater-0.15-upgrade.md  002-batched-git-blame-cache.md  002-predicate-combinators-debt-detection.md  002-testing-matrix-expansion.md  002-writer-effect-analysis-telemetry.md  003-code-quality-tooling.md  003-sink-effect-report-streaming.md  003-validation-field-context-accumulation.md  003-xxhash-duplication-detection.md  004-expanded-validation-patterns.md  004-parallel-chunk-processing.md  004-scheduled-ci-workflows.md  005-error-context-consolidation.md  005-refactor-debt-type-display.md  006-refactor-handle-detail-key.md  007-refactor-parse-config-into-patterns.md  008-consolidate-markdown-output-formats.md  01-debtmap-standalone-tool.md  014-show-parameter-filtering.md  02-debtmap-completion.md  021-dead-code-detection-category.md  03-inline-suppression-comments.md  04-javascript-typescript-language-support.md  05-test-coverage-debt-metrics.md  06-git-blame-integration-age-weighted-prioritization.md  07-recalibrate-risk-formula.md  08-fix-testing-prioritization.md  09-enhance-complexity-detection.md  09-fix-complexity-calculations.md  10-add-context-aware-risk.md  10-enhance-complexity-detection.md  (+560 more)
src/: cli.rs  (+17 more)
(+1684 files in other folders)
