[package]
name = "debtmap"
version = "0.2.4"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "Code complexity and technical debt analyzer"
license = "MIT"
repository = "https://github.com/iepathos/debtmap"
readme = "README.md"
keywords = ["code-analysis", "technical-debt", "complexity", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "debtmap"
path = "src/lib.rs"

[[bin]]
name = "debtmap"
path = "src/main.rs"

[[bin]]
name = "prodigy-validate-debtmap-improvement"
path = "src/bin/prodigy-validate-debtmap-improvement.rs"

[dependencies]
# AST Parsing
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
rustpython-parser = "0.4"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Functional data structures
im = { version = "15.1", features = ["serde"] }

# Coverage parsing
lcov = "0.8"

# Parallel processing
rayon = "1.10"
dashmap = "6.1"
crossbeam = "0.8"

# Hashing for duplication detection
sha2 = "0.10"

# Additional dependencies
quote = "1.0"
glob = "0.3"
regex = "1.10"
which = "8.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File system
walkdir = "2.5"
ignore = "0.4"

# Output formatting
colored = "3.0"
comfy-table = "7.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Path handling
pathdiff = "0.2"
once_cell = "1.21.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Graph algorithms for taint analysis
petgraph = "0.8"

[dev-dependencies]
# Dependency analysis tools
cargo-modules = "0.17"
# Testing
proptest = "1.4"
pretty_assertions = "1.4"
tempfile = "3.10"
criterion = "0.7"

# Test data
indoc = "2.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Faster linking on macOS
incremental = true            # Enable incremental compilation

[profile.dev.package."*"]
opt-level = 3                 # Optimize dependencies in dev mode

[[bench]]
name = "cache_pruning"
harness = false

[[bench]]
name = "call_graph_bench"
harness = false

[[bench]]
name = "lcov_parallel_bench"
harness = false

[[bench]]
name = "parallel_performance"
harness = false

[[bench]]
name = "python_type_inference_bench"
harness = false

