[package]
name = "debtmap"
version = "0.9.1"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "Code complexity and technical debt analyzer"
license = "MIT"
repository = "https://github.com/iepathos/debtmap"
readme = "README.md"
keywords = ["code-analysis", "technical-debt", "complexity", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.docs.rs]
# Build with all features for comprehensive documentation
all-features = true
# Use nightly for better doc features
rustdoc-args = ["--cfg", "docsrs"]
# Show multiple platform targets
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

[package.metadata.llvm-cov]
# Exclude test files and directories from coverage
ignore-filename-regex = [
    "tests/.*",
    ".*_test\\.rs",
    ".*_tests\\.rs",
    ".*/tests/.*",
    ".*/test/.*",
    "benches/.*",
    ".*/bench/.*",
    ".*/benchmark/.*"
]

[lib]
name = "debtmap"
path = "src/lib.rs"

[[bin]]
name = "debtmap"
path = "src/main.rs"

[dependencies]
# AST Parsing
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Functional data structures
im = { version = "15.1", features = ["serde"] }

# Coverage parsing
lcov = "0.8"
rustc-demangle = "0.1"

# Parallel processing
rayon = "1.10"
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"

# Hashing for duplication detection
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Binary serialization for caching
bincode = "1.3"

# Additional dependencies
quote = "1.0"
glob = "0.3"
regex = "1.10"
which = "8.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Effect composition and validation
stillwater = { version = "0.13", features = ["async"] }
premortem = "0.6"
tokio = { version = "1", features = ["rt"] }

# File system
walkdir = "2.5"
ignore = "0.4"

# Output formatting
colored = "3.0"
comfy-table = "7.1"

# Progress feedback
indicatif = { version = "0.18", features = ["rayon"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.29"
unicode-width = "0.2"
num_cpus = "1.16"
arboard = "3.3"  # Clipboard access (cross-platform)
fuzzy-matcher = "0.3"  # Fuzzy search for results explorer

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Path handling
pathdiff = "0.2"
once_cell = "1.21.3"
dirs = "6.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Graph algorithms for taint analysis
petgraph = "0.8"
lazy_static = "1.5.0"
html-escape = "0.2.13"

[dev-dependencies]
# Dependency analysis tools
cargo-modules = "0.25"
# Testing
proptest = "1.4"
pretty_assertions = "1.4"
tempfile = "3.10"
criterion = "0.8"
trybuild = "1.0"

# Test data
indoc = "2.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Faster linking on macOS
incremental = true            # Enable incremental compilation

[profile.dev.package."*"]
opt-level = 3                 # Optimize dependencies in dev mode

[[bench]]
name = "call_graph_bench"
harness = false

[[bench]]
name = "lcov_parallel_bench"
harness = false

[[bench]]
name = "parallel_performance"
harness = false

[[bench]]
name = "unified_output_format_bench"
harness = false

[[bench]]
name = "constructor_detection_bench"
harness = false

[[bench]]
name = "validate_parallel_bench"
harness = false

[[bench]]
name = "ast_parsing_optimization_bench"
harness = false

[[bench]]
name = "coverage_performance"
harness = false

[[bench]]
name = "coverage_scoring"
harness = false

[[bench]]
name = "score_based_sorting_bench"
harness = false

[[bench]]
name = "batch_analysis"
harness = false

[[bench]]
name = "tier_classification_bench"
harness = false
