[package]
name = "why-ai-fails-complex-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "etl_bad"
path = "etl_bad.rs"

[[bin]]
name = "etl_good"
path = "etl_good.rs"

[[bin]]
name = "events_bad"
path = "events_bad.rs"

[[bin]]
name = "events_good"
path = "events_good.rs"
